--- a/game.html
+++ b/game.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="style.css"> <!-- You can create a CSS file for styling -->
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <h1 class="heading1">Player X wins!</h1>
-    <div class="game-container">
+    <div  class="containerGame" >
         <div class="row">
             <div class="cell" data-cell></div>
             <div class="cell" data-cell></div>
@@ -29,8 +29,10 @@
     <div class="button-container">
         <button class="restart-button" id="restart-button">Restart Game</button>
     </div>
+ 
+        <button class="back-button" id="back-button">Back</button>
+ 
 
-
-    <script src="easy.js"></script> <!-- You will create a JavaScript file for game logic -->
+    <script src="game.js"></script> 
 </body>
 </html>
