--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <h1 class="heading-index">Let's Play with Tic Tac Toe</h1>
             <p>Choose difficulty level</p>
             <div class="difficulty-selector">
-                <button class="option-btn" id="easy-button"><a class="btn-level" href="easy.html">Easy</button>
-                    <button class="option-btn" id="medium-button"> <a class="btn-level"href="medium.html">Medium</button>
-                <button class="option-btn" id="hard-button"><a class="btn-level"href="hard.html">Hard</button>
+                <button class="option-btn" id="easy-button"><a class="btn-level" href="game.html">Easy</button>
+                    <button class="option-btn" id="medium-button"> <a class="btn-level"href="game.html">Medium</button>
+                <button class="option-btn" id="hard-button"><a class="btn-level"href="game.html">Hard</button>
             </div>
 
         </div>
